# meteo-api

./: .gitignore  Cargo.toml  README.md
meteo-db/: README.md  data.sql  docker-compose.yml
src/: main.rs  meteo.rs
