[package]
name = "meteo-api"
version = "0.1.0"
authors = ["janobono <janobono@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0.117", features = ["derive"] }
mysql = "20.1.0"
chrono = "0.4.19"
